--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
 <h1> FPG11-70 </h1>
-<p> Welcome to the homepage for the FPG11-70, FPGA emulation of the Digital Equipment Corporation PDP11-70 minicomputer! </p>
+<p> Welcome to the homepage for the FPG11-70, FPGA emulation of the Digital Equipment Corporation PDP11-70 minicomputer! <br/> 
+	<br/>
+	Resources
+	<br/>
+<a href="http://bitsavers.trailing-edge.com/pdf/dec/pdp11/1170/" target="_blank">bitsavers PDP11-70 Documents</a>
+</p>
